--- a/apps/gauzy/src/app/pages/organizations/edit-organization/edit-organization.component.scss
+++ b/apps/gauzy/src/app/pages/organizations/edit-organization/edit-organization.component.scss
@@ -137,3 +137,9 @@
         margin-bottom: 10px;
     }
 }
+
+:host{
+    nb-card{
+        height: unset;
+    }
+}
